--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -687,7 +687,7 @@
 </ul>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employee <strong>does not</strong> meet all conditions, <strong>do not</strong> use the simplified standby charge calculation.</p>
+			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employee <strong>does not</strong> meet all conditions, <strong>do not</strong> use the simplified standby charge calculation. You must used the detailed standby charge calculation.</p>
 
 </li>
                          <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If the employee meets <strong>all</strong> conditions, calculate using the simplified standby charge calculation.</p></li>
@@ -715,7 +715,7 @@ estimated by the number of pay periods in the year. </p>
 <p>At the end of the year, you must calculate the value of the benefit related to an automobile using the actual number of personal kilometres travelled during the year.</p>
 </details>
 </br>
-<h4 id="simple" class="mrgn-tp-lg">Simplified calculation</h4>
+<h4 id="simple" class="mrgn-tp-lg">Simplified standby charge calculation</h4>
  <details><summary>Situation: You <strong>own</strong> the automobile and you want to calculate using the <strong>simplified</strong> calculation</summary>
 <p id="simple1">Use the following to calculate the simplified calculation if <strong>all conditions in steps 8 are met</strong>.</p>
 	    
@@ -880,7 +880,7 @@ estimated by the number of pay periods in the year. </p>
 </details>
 </details>
 
-<h4 id="detailedmethod" class="mrgn-tp-md">Detailed calculation</h4>	
+<h4 id="detailedmethod" class="mrgn-tp-md">Detailed standby charge calculation</h4>	
 <details><summary>Situation: You <strong>own</strong> the automobile and you want to calculate using the <strong>detailed</strong> calculation</summary>
 
 <p id="calcdetail">Use this following to calculate if you own the automobile:</p> 
