--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -716,7 +716,7 @@ estimated by the number of pay periods in the year. </p>
 </details>
 </br>
 <h4 id="simple" class="mrgn-tp-lg">Simplified standby charge calculation</h4>
- <details><summary>Situation: You <strong>own</strong> the automobile and you want to calculate using the <strong>simplified</strong> calculation</summary>
+ <details><summary>Situation: Calculate using the simplified standby charge calculation</summary>
 <p id="simple1">Use the following to calculate the simplified calculation if <strong>all conditions in steps 8 are met</strong>.</p>
 	    
 <details><summary>What is included in the cost of the automobile</summary>
@@ -881,7 +881,7 @@ estimated by the number of pay periods in the year. </p>
 </details>
 <br>
 <h4 id="detailedmethod" class="mrgn-tp-md">Detailed standby charge calculation</h4>	
-<details><summary>Situation: You <strong>own</strong> the automobile and you want to calculate using the <strong>detailed</strong> calculation</summary>
+<details><summary>You <strong>own</strong> the automobile - Calculate using the detailed standby charge calculation</summary>
 
 <p id="calcdetail">Use this following to calculate if you own the automobile:</p> 
  <h4>Step A - Cost of automobile</h4> 
@@ -1048,7 +1048,7 @@ estimated by the number of pay periods in the year. </p>
 </details>
 </details>
 	      
-<details><summary>Situation: You <strong>own</strong> the automobile and your <strong>employee sells or leases automobiles</strong>, and you want to calculate using the detailed calculation</summary>
+<details><summary>You <strong>own</strong> the automobile and your <strong>employee sells or leases automobiles</strong> - Calculate using the detailed standby charge calculation</summary>
 <p>Use this calculation if <strong>all</strong> of the following apply:</p>
 <ul class="fa-ul">
 		<li><span class="fas fa-check fa-li text-success"> </span> You own the automobile</li>  
@@ -1232,7 +1232,7 @@ estimated by the number of pay periods in the year. </p>
 </details>
 </details>
 
-<details><summary>Situation: You <strong>lease</strong> the automobile and you want to calculate using the <strong>detailed</strong> calculation</summary>
+<details><summary>You <strong>lease</strong> the automobile - Calculate using the detailed standby charge calculation</summary>
 
 <p>Use the following to calculate if you lease the automobile:</p> 
  <h4>Step A - Cost of leased automobile</h4> 
@@ -1482,7 +1482,7 @@ estimated by the number of pay periods in the year. </p>
 </details>
 <br>
 <h4 id="reducedmethod" class="mrgn-tp-md">Reduced standby charge calculation</h4>
-<details><summary>Situation: You want to calculate using the <strong>reduced standby charge</strong></summary>
+<details><summary>Calculate using the reduced standby charge calculcation</summary>
 
 <p id="standbyreduce">Use the following to calculate the reduced standby charge if <strong>all conditions in steps 7 are met</strong>.</p>
 
