--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1052,12 +1052,12 @@ estimated by the number of pay periods in the year. </p>
 <p>Use this calculation if <strong>all</strong> of the following apply:</p>
 <ul class="fa-ul">
 		<li><span class="fas fa-check fa-li text-success"> </span> You own the automobile</li>  
-	 	<li><span class="fas fa-check fa-li text-success"> </span> You make the automobile available to your employee or a person related to the employee</li>  
+	 	<li><span class="fas fa-check fa-li text-success"> </span> You make the automobile available to your employee or a person who does not deal at arm’s length with the employee</li>  
 		<li><span class="fas fa-check fa-li text-success"> </span>  Your employee mainly sells or leases automobiles</li>
                 <li><span class="fas fa-check fa-li text-success"> </span>  You acquired at least one automobile during the year</li>
 </ul>
 <br/>
-<p>If <strong>all</strong> the above conditions are met, you can choose the rate of 1.5% instead of 2%. Use the higher of <strong>one</strong> of the following amounts: </p>
+<p>If <strong>all</strong> the above conditions are met, you can choose the rate of 1.5% instead of 2% for the automobile’s cost to you. To calculate the automobile’s cost, use the <strong>higher</strong> of the following amounts: </p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
                              <li class="cnjnctn-col">    <p>Average cost (including taxes) of <strong>all new</strong> automobiles you acquired during the year for sale or lease</p>
 			                              </li>
