--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1234,23 +1234,34 @@ estimated by the number of pay periods in the year. </p>
 
 <details><summary>You <strong>lease</strong> the automobile - Calculate using the detailed standby charge calculation</summary>
 
-<p>Use the following to calculate if you lease the automobile:</p> 
+<p>Use the following to calculate the lease cost for standby charge purposes if you lease the automobile:</p> 
  <h4>Step A - Cost of leased automobile</h4> 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
               
 <details><summary>What is included in the cost of the lease</summary>
 <p>The cost of leasing the automobile includes the following:</p>
 
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col">Rental cost for the automobile </li>
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">Total monthly lease or rental cost for the automobile (including any trade in amount, down payment made over the term of the lease, GST/HST and PST, but excluding insurance) divided by the number of months in the term of the lease.  The total leasing cost is generally equal to its fair market value at the time the automobile is leased) </li>
 <li class="cnjnctn-col">Any associated costs, such as maintenance contracts,  down payments, trade in amount, excess mileage charges, terminal charges less terminal credits </li>
-<li class="cnjnctn-col">GST/HST and PST paid to the lessor under the leasing contract </li>
 </ul>
-<p>The cost of leasing the automobile does not include liability and collision insurance costs.</p>
 </details>
 <details><summary>What are lump-sum lease payments</summary>
-<p>Some lease contracts may contain clauses that reduce the monthly lease costs by requiring a substantial lump-sum payment at the start or end of the lease. Care must be taken to determine if it is actually a lease payment, not a payment aimed at purchasing the vehicle, which could change the calculation of standby charge for the vehicle. Payments made at the start of a lease contract are lease payments for the year and apply in full to the calculation of the benefit. The CRA will give the employer the option of proportionally attributing such payments over the term of the lease and calculating the benefit accordingly. </p>
-<p>A variation of this approach is seen when an employer provides a substantial refundable deposit at the start of a lease contract, after which the monthly lease costs are reduced and the deposit is credited to the purchase of the vehicle at the end of the lease contract or refunded if the employer does not purchase the vehicle. The value of the lease, when calculating the benefit received by the employee from the use of the vehicle, is the fair market value of the lease, equivalent to what the lease payments would have been if the deposit did not exist. </p>
+<p>Some lease contracts may contain clauses that reduce the monthly lease costs by requiring a substantial lump-sum payment at the start or end of the lease. </p>
+
+<p>Lump-sum amounts you pay the lessor at the beginning or end of a lease that are not a payment to buy the automobile will affect the standby charge for the automobile. </p>
+
+<p>Prorate the lump-sum payment you make at the beginning of a lease over the life of the lease and add it to the leasing cost. </p>
+
+<h4>Terminal charge - Lump sum payment you made at the end of a lease</h4>
+<p>If you make a lump sum payment <strong>at the end </strong>of a lease, the CRA considers the payment to be a <strong>terminal charge</strong>. This means your lease costs should have been higher and the standby charge for the automobile has been understated. In this situation, use <strong>one </strong>of the following methods:</p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col">Add the terminal charge to the lease costs in the year you end the lease </li>
+<li class="cnjnctn-col">Prorate the payment over the term of the lease and amend the T4 or T4A slip of the employee who used the automobile, as long as they agree and can still ask for an income tax adjustment for the years in question </li>
+</ul>
+<p>Your employee can send a request to the CRA to adjust their T1 income tax and benefit returns for those years.</p>
+
+
 <h4>Terminal credit - Lump sum payment you received at the end of a lease </h4>
 <p>A lump sum payment <strong>you receive from the lessor at the end of a lease </strong>is considered to be a <strong>terminal credit</strong>. This means the standby charge for the automobile has been overstated because the lease costs should have been lower. In this situation, use <strong>one </strong>of the following methods:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -1259,12 +1270,6 @@ estimated by the number of pay periods in the year. </p>
 </ul>
 <p>Your employee can send a request to the CRA to adjust their T1 income tax and benefit returns for those years.</p>
 
-<h4>Terminal charge - Lump sum payment you made at the end of a lease</h4>
-<p>If you make a lump sum payment <strong>at the end </strong>of a lease, the CRA considers the payment to be a <strong>terminal charge</strong>. This means your lease costs should have been higher and the standby charge for the automobile has been understated. In this situation, use <strong>one </strong>of the following methods:</p>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col">Add the terminal charge to the lease costs in the year you end the lease </li>
-<li class="cnjnctn-col">Prorate the payment over the term of the lease and amend the T4 or T4A slip of the employee who used the automobile, as long as they agree and can still ask for an income tax adjustment for the years in question </li>
-</ul>
 </details> 
 <br>
              
