--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1377,8 +1377,8 @@ estimated by the number of pay periods in the year. </p>
 
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>In 2022, Judith was required to use the automobile in connection with her employment in Ontario. The initial costs (including down payment, trade-in amount, and taxes not included in monthly lease cost) was $500. The monthly leasing cost (including associated costs, GST/HST and PST) is $600 and the total lease period is 24 months. She is not selling or leasing automobiles. The automobile was made available to Judith for 150 days during the year. Judith was required to use the automobile in connection with her employment. She used the automobile for business driving 40% of the time. In reviewing her travel logbook, you found that she drove 5,500 km for personal driving 12,000 km out of a total of 20,000 km. Judith reimbursed you $500 for the standby charge. </p>
- <h4>Step A - Cost of leased automobile</h4>
+<p>In 2022, Judith was required to use the automobile in connection with her employment in Ontario. The initial costs (including down payment, trade-in amount, and taxes not included in monthly lease cost) was $500. The monthly leasing cost (including associated costs, GST/HST and PST) is $600 and the total lease period is 24 months. She is not selling or leasing automobiles. The automobile was made available to Judith for 150 days during the year. Judith was required to use the automobile in connection with her employment. She used the automobile for business driving 40% of the time. In reviewing her travel logbook, you found that she drove 12,000 km for personal driving out of a total of 20,000 km. Judith reimbursed you $500 for the standby charge. </p>
+ <h4>Step A - Cost of leased automobile per month</h4>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                               
 		<li><span class="fa-stack text-success">
@@ -1489,7 +1489,7 @@ estimated by the number of pay periods in the year. </p>
 <h4 id="reducedmethod" class="mrgn-tp-md">Reduced standby charge calculation</h4>
 <details><summary>Calculate using the reduced standby charge calculcation</summary>
 
-<p id="standbyreduce">Use the following to calculate the reduced standby charge if <strong>all conditions in steps 7 are met</strong>.</p>
+<p id="standbyreduce">Use the following to calculate the reduced standby charge if <strong>all conditions in steps 7 are met</strong>:</p>
 
 <h4>Step A - Use and availability</h4> 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
