--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1645,7 +1645,9 @@ estimated by the number of pay periods in the year. </p>
 
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>In 2022, Diane was required to use an  automobile provided and owned by her employer in connection with her employment in Ontario. The cost of the automobile when it was bought, including options and accessories, and the HST was $50,000. Her employment does  not involve selling or leasing automobiles. The automobile was made available to Diane for 150 days during the year. She used the automobile for business driving 80% of the time. In reviewing her travel logbook, you found that she drove 5,500 km for personal driving (1,100 km per 30-day period) out of a total of 27,525 km. Diane did not reimburse you for the standby charge.</p>
+<p>In 2022, Diane was required to use an  automobile provided and owned by her employer in connection with her employment in Ontario (condition 1). The cost of the automobile when it was bought, including options and accessories, and the HST was $50,000. Her employment does not involve selling or leasing automobiles. The automobile was made available to Diane for 150 days during the year. She used the automobile for business driving 80% of the time (condition 2). In reviewing her travel logbook, you found that she drove 5,500 km for personal driving (1,100 km per 30-day period) out of a total of 27,525 km (condition 3). Diane did not reimburse you for the standby charge. </p>
+
+<p>Use the following to calculate the reduced standby charge because Diane meets all conditions for the reduced standby charge:</p>
 <h4>Step A - Use and availability</h4> 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
 
