--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1998,7 +1998,7 @@ estimated by the number of pay periods in the year. </p>
 
 <li><h3 id="step12">Calculate the value of the automobile benefit to be included on the T4 slip</h3>
 
-<p id="value">Use the following to calculate the total value of the automobile benefit:</p>
+<p id="value">Use the following calculation to determine the total value of your employee’s benefit:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                  <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
