--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1810,7 +1810,7 @@ estimated by the number of pay periods in the year. </p>
 <br/>
 <h4>Situations</h4>
 
-<details><summary>Situation: You want to calculate using the <strong>optional</strong> calculation</summary>
+<details><summary>Calculate using the <strong>optional</strong> operating expenses calculation</summary>
 <p id="calcoper1">Use the optional calculation if <strong>all</strong> of the following apply:</p>
 
 <ul class="fa-ul">
@@ -1897,7 +1897,7 @@ estimated by the number of pay periods in the year. </p>
 </details>
 </details>
 
-<details><summary>Situation: You want to calculate using the <strong>fixed rate</strong> calculation</summary>
+<details><summary>Calculate using the <strong>fixed rate</strong> operating expenses calculation</summary>
 <p id="calcoper2">Use <strong>one</strong> of the following fixed rates per kilometre of personal driving to calculate the operating expenses benefit:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
                              
@@ -1914,7 +1914,8 @@ estimated by the number of pay periods in the year. </p>
                               </li>
                            </ul>
 
-<br/>
+<hr>
+<p>Use the following to calculate the fixed rate operating expenses calculation:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
@@ -1953,7 +1954,8 @@ estimated by the number of pay periods in the year. </p>
 </ul>
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>In 2022, Matthew was required to use an  automobile provided and owned by his employer in connection with his employment in Ontario. The cost of the automobile when it was bought, including options and accessories, and the HST was $50,000. His employment does  not involve selling or leasing automobiles. The automobile was made available to Matthew throughout the year (365 days). In reviewing  his travel logbook, you found that he drove 10,000 km for personal driving out of a total of 12,000 km. Matthew reimbursed you $500 for the standby charge and $300 for operating expenses 45 days before the end of the year. Matthew did not provide a written notice to use the alternative method of calculating the operating expenses benefit.</p>
+<p>In 2022, Matthew was required to use an  automobile provided and owned by his employer in connection with his employment in Ontario. The cost of the automobile when it was bought, including options and accessories, and the HST was $50,000. His employment does  not involve selling or leasing automobiles. The automobile was made available to Matthew throughout the year (365 days). In reviewing  his travel logbook, you found that he drove 10,000 km for personal driving out of a total of 12,000 km. Matthew reimbursed you $500 for the standby charge and $300 for operating expenses 45 days before the end of the year. Matthew did not notify you in writing before the end of the taxation year to use the optional calculation method.</p>
+<p>Use the following to calculate the fixed rate operating expenses calculation:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
@@ -1990,6 +1992,7 @@ estimated by the number of pay periods in the year. </p>
 			
 
 </ul>
+<p>Matthew is also eligible to a $500 reduction for his standby charge benefit (amount from step 10).</p>
 </details>
 </details>
 
