--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1915,7 +1915,7 @@ estimated by the number of pay periods in the year. </p>
                            </ul>
 
 <hr>
-<p>Use the following to calculate the fixed rate operating expenses calculation:</p>
+<p>Use the following for the fixed rate operating expenses calculation:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
@@ -1955,7 +1955,7 @@ estimated by the number of pay periods in the year. </p>
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
 <p>In 2022, Matthew was required to use an  automobile provided and owned by his employer in connection with his employment in Ontario. The cost of the automobile when it was bought, including options and accessories, and the HST was $50,000. His employment does  not involve selling or leasing automobiles. The automobile was made available to Matthew throughout the year (365 days). In reviewing  his travel logbook, you found that he drove 10,000 km for personal driving out of a total of 12,000 km. Matthew reimbursed you $500 for the standby charge and $300 for operating expenses 45 days before the end of the year. Matthew did not notify you in writing before the end of the taxation year to use the optional calculation method.</p>
-<p>Use the following to calculate the fixed rate operating expenses calculation:</p>
+<p>Use the following for the fixed rate operating expenses calculation:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
