--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1898,10 +1898,47 @@ estimated by the number of pay periods in the year. </p>
 </details>
 
 <details><summary>Calculate using the <strong>fixed rate</strong> operating expenses calculation</summary>
-<p id="calcoper2">Use <strong>one</strong> of the following prescribed rates (section 7305.1 of the Income Tax Regulations) per kilometre of personal driving to calculate the operating expenses benefit:</p>
+<p id="calcoper2">Use the <a href="#oper-rates" aria-controls="centred-popup" class="wb-lbx" role="button">prescribed rates per kilometre&nbsp;<span class="far fa-question-circle"></span></a> of personal driving to calculate the fixed rate operating expenses:</p>
 
+<ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
+                               <li><span class="fa-stack text-success">
+                                    <span class="far fa-circle fa-stack-2x"></span>
+                                    <span class="fas fa-hashtag fa-stack-1x"></span>
+                                    </span><span class="mrgn-tp-0 text-muted h5"> Total number of kilometres travelled for personal driving</span> 
+                                 </li>
 
-    <div class="table-responsive">
+<li class="brdr-bttm">
+                                 <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
+                                 <span class="far fa-circle fa-stack-2x"></span>
+                                 <span class="fas fa-dollar-sign fa-stack-1x"></span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5">Fixed rate </span>
+                                 <div class="mrgn-tp-md"></div>
+                              </li>
+  
+ <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
+                                    <span class="fas fa-circle fa-stack-2x"></span>
+                                    <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> This is the amount for the operating expenses benefit 
+
+                                    </span></span></li>
+	 <li class="brdr-bttm">
+                                    <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
+                                    <span class="far fa-circle fa-stack-2x"></span>
+                                    <span class="fas fa-dollar-sign fa-stack-1x"></span>
+                                    </span>  <span class="mrgn-tp-0 text-muted h5"> Any amounts your employee reimbursed you for the operating costs benefit <strong>no later than 45 days after the end of the year</strong></span>
+                                    <div class="mrgn-tp-md"></div>
+                                 </li>
+                                 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
+                                    <span class="fas fa-circle fa-stack-2x"></span>
+                                    <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
+                                    </span> <span class="mrgn-tp-0 text-muted h5"> This is the total value of the operating expenses benefit  
+                                    </span></span> </li>
+			
+
+</ul>
+<details><summary>Prescribed rates (section 7305.1 of the Income Tax Regulations) per kilometre</summary>
+<div id="ajax-oper-rates">  
+   <div class="table-responsive">
       <table class="table table-striped small table-condensed text-center">
         <caption class="wb-inv">
       Prescribed rates (section 7305.1 of the Income Tax Regulations) per kilometre
@@ -2019,46 +2056,9 @@ $0.XX
 
 </tbody>
 </table>
-</div>
+</div></div>
+</details>
 
-<hr>
-<p>Use the following for the fixed rate operating expenses calculation:</p>
-<ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
-                               <li><span class="fa-stack text-success">
-                                    <span class="far fa-circle fa-stack-2x"></span>
-                                    <span class="fas fa-hashtag fa-stack-1x"></span>
-                                    </span><span class="mrgn-tp-0 text-muted h5"> Total number of kilometres travelled for personal driving</span> 
-                                 </li>
-
-<li class="brdr-bttm">
-                                 <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
-                                 <span class="far fa-circle fa-stack-2x"></span>
-                                 <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5">Fixed rate </span>
-                                 <div class="mrgn-tp-md"></div>
-                              </li>
-  
- <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
-                                    <span class="fas fa-circle fa-stack-2x"></span>
-                                    <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> This is the amount for the operating expenses benefit 
-
-                                    </span></span></li>
-	 <li class="brdr-bttm">
-                                    <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
-                                    <span class="far fa-circle fa-stack-2x"></span>
-                                    <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span>  <span class="mrgn-tp-0 text-muted h5"> Any amounts your employee reimbursed you for the operating costs benefit <strong>no later than 45 days after the end of the year</strong></span>
-                                    <div class="mrgn-tp-md"></div>
-                                 </li>
-                                 <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
-                                    <span class="fas fa-circle fa-stack-2x"></span>
-                                    <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5"> This is the total value of the operating expenses benefit  
-                                    </span></span> </li>
-			
-
-</ul>
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
 <p>In 2022, Matthew was required to use an  automobile provided and owned by his employer in connection with his employment in Ontario. The cost of the automobile when it was bought, including options and accessories, and the HST was $50,000. His employment does  not involve selling or leasing automobiles. The automobile was made available to Matthew throughout the year (365 days). In reviewing  his travel logbook, you found that he drove 10,000 km for personal driving out of a total of 12,000 km. Matthew reimbursed you $500 for the standby charge and $300 for operating expenses 45 days before the end of the year. Matthew did not notify you in writing before the end of the taxation year to use the optional calculation method.</p>
@@ -2352,7 +2352,10 @@ $0.XX
 	<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/oper-vehicle.txt"></div>
 	</div></section>
 
-	
+	<section id="oper-rates" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Prescribed rates (section 7305.1 of the Income Tax Regulations) per kilometre</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="#ajax-oper-rates"></div>
+	</div></section>
 	
 	
        <section id="automobile" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is considered an automobile</h2>
