--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1956,6 +1956,18 @@ estimated by the number of pay periods in the year. </p>
 <tbody>
 <tr>
 	<td class="align-right">
+2024
+</td>
+	<td >
+To be determined (december) 
+</td>
+	<td >
+To be determined (december)
+</td>
+</tr>
+
+<tr>
+	<td class="align-right">
 2023
 </td>
 	<td >
@@ -1981,10 +1993,10 @@ $0.29
 2021
 </td>
 	<td >
-$0.XX 
+$0.27
 </td>
 	<td >
-$0.XX 
+$0.24 
 </td>
 </tr>
 <tr>
@@ -1992,10 +2004,10 @@ $0.XX
 2020
 </td>
 	<td >
-$0.XX 
+$0.28 
 </td>
 	<td >
-$0.XX 
+$0.25 
 </td>
 </tr>
 <tr>
@@ -2003,10 +2015,10 @@ $0.XX
 2019
 </td>
 	<td >
-$0.XX 
+$0.28 
 </td>
 	<td >
-$0.XX 
+$0.25 
 </td>
 </tr>
 <tr>
@@ -2014,10 +2026,10 @@ $0.XX
 2018
 </td>
 	<td >
-$0.XX 
+$0.26 
 </td>
 	<td >
-$0.XX 
+$0.23 
 </td>
 </tr>
 <tr>
@@ -2025,10 +2037,10 @@ $0.XX
 2017
 </td>
 	<td >
-$0.XX 
+$0.25 
 </td>
 	<td >
-$0.XX 
+$0.22 
 </td>
 </tr>
 <tr>
@@ -2036,10 +2048,10 @@ $0.XX
 2016
 </td>
 	<td >
-$0.XX 
+$0.26 
 </td>
 	<td >
-$0.XX 
+$0.23 
 </td>
 </tr>
 <tr>
@@ -2047,10 +2059,10 @@ $0.XX
 2015
 </td>
 	<td >
-$0.XX 
+$0.27 
 </td>
 	<td >
-$0.XX 
+$0.24 
 </td>
 </tr>
 
