--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -716,7 +716,7 @@ estimated by the number of pay periods in the year. </p>
 </details>
 </br>
 <h4 id="simple" class="mrgn-tp-lg">Simplified standby charge calculation</h4>
- <details><summary>Situation: Calculate using the simplified standby charge calculation</summary>
+ <details><summary>Calculate using the simplified standby charge calculation</summary>
 <p id="simple1">Use the following to calculate the simplified calculation if <strong>all conditions in steps 8 are met</strong>.</p>
 	    
 <details><summary>What is included in the cost of the automobile</summary>
