--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -323,11 +323,11 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the vehicle is a <strong>motor vehicle</strong>, <strong>do not</strong> continue to next step. Refer to: <a href="/cra-arc/payroll/calculate/benefit/motor-vehicle.html#h_2">Motor vehicle provided by the employer</a>. </li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the vehicle is an <strong>automobile</strong>, continue to: <a href="#h_01">Step 2 - Determine if you made the automobile available to the employee</a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the vehicle is an <strong>automobile</strong>, continue to: <a href="#h_01">Step 2 - Determine if you made the automobile available to your employee</a>.</li>
 </ul>
 </li>
 
-<li><h3 id="step2">Determine if you made the automobile available to the employee</h3>
+<li><h3 id="step2">Determine if you made the automobile available to your employee</h3>
 <div data-ajax-replace="ajax/availability-vehicle.txt"></div>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -372,7 +372,7 @@
 <p>You need to calculate:</p>
 </div>
 
-<section id="availability1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"> <header class="modal-header"><h2 class="modal-title">What is considered made available to the employee</h2>
+<section id="availability1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"> <header class="modal-header"><h2 class="modal-title">What is considered made available to your employee</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/availability-vehicle.txt"></div>
 
@@ -406,35 +406,33 @@
 <div data-ajax-replace="ajax/records-vehicle.txt"></div>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If <strong>no record</strong> is kept, the employee <strong>does not</strong> benefit from the reduction to the standby charge.</p> 
+<li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If <strong>no record</strong> is kept, your employee <strong>does not</strong> benefit from the reduction to the standby charge.</p> 
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step9">Step 9 - Determine which method to use to calculate the benefit</a>.</p></li>
-<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the employee kept the <strong> required detailed records</strong> and you received a copy, the employee may be eligible for the <strong>reduced standby charge</strong>.</p>
-<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Determine if the employee is eligible for the reduced standby charge</a>.</p></li>
+<li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If your employee kept the <strong> required detailed records</strong> and you received a copy, your employee may be eligible for the <strong>reduced standby charge</strong>.</p>
+<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Determine if your employee is eligible for the reduced standby charge</a>.</p></li>
 </ul>
 </li>
 
-<li><h3 id="step7">Determine if the employee is eligible for the reduced standby charge</h3>
+<li><h3 id="step7">Determine if your employee is eligible for the reduced standby charge</h3>
 <p id="reduce">Based on the <a href="#log" aria-controls="centred-popup" class="wb-lbx" role="button">required records&nbsp;<span class="far fa-question-circle"></span></a> you received from your employee, you need to determine if you can use the reduced standby charge calculation. </p>
 
 <p>Your employee is eligible for the reduced standby charge if <strong>all</strong> of the following conditions apply:</p>
 
-<details><summary><strong>Condition 1</strong>: Your employee is required to use the automobile in connection with or in the course of an office or employment</summary>
+<details><summary><strong>Condition 1</strong>: You required your employee to use the automobile in connection with or in the course of an office or employment</summary>
 <div id="ajax-work">
-<p id="cond1">You need to determine if the employee was required to use the automobile in connection with or in the course of an office or employment.</p>
-<hr>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> require your employee to use the automobile as part of their duties of an office or employment, your employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step9">Step 9 - Determine which method to use to calculate the benefit</a></p>  </li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Determine if your employee is eligible for the simplified standby charge calculation</a></p>  </li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to use the automobile as part of their duties of an office or employment, the benefit meets <strong>one of the conditions for the reduced standby charge</strong>. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#cond2">Condition 2: More than 50% of the distance travelled is for business driving</a></p></li>
 
 </ul>
 </div></details>
 	 
-<details><summary><strong>Condition 2</strong>: More than 50% of the distance travelled is for business driving</summary>
+<details><summary><strong>Condition 2</strong>: Your employee uses the automobile more than 50% of the distance driven for business driving</summary>
 <div id="ajax-distance">
-<p id="cond2">You need to determine if more than 50% of the distance travelled is for <a href="#log" aria-controls="centred-popup" class="wb-lbx" role="button">business driving&nbsp;<span class="far fa-question-circle"></span></a>. Use the following to calculate the share of the distance travelled for business driving:</p>
+<p id="cond2">You need to determine if your employee uses the automobile more than 50% of the distance driven for <a href="#log" aria-controls="centred-popup" class="wb-lbx" role="button">business driving&nbsp;<span class="far fa-question-circle"></span></a>. Use the following to calculate the share of the distance driven for business driving:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
 
 		 <li><span class="fa-stack text-success">
@@ -515,8 +513,8 @@
 
 </details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-	 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the automobile is driven <strong>50% or less</strong> for business driving, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
-	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step9">Step 9 - Determine which method to use to calculate the benefit</a></p></li>
+	 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the automobile is driven <strong>50% or less</strong> for business driving, your employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
+	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Determine if your employee is eligible for the simplified standby charge calculation</a></p></li>
          <li class="cnjnctn-col">  <p><span class="fas fa-check fa-lg text-success"></span> If <strong>more than 50%</strong> of the distance travelled is for business driving, the benefit meets the <strong>one of the conditions for the reduced standby charge</strong>. </p>
 	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#cond3">Condition 3: Number of kilometres of personal driving is within the limit for the reduced standby charge</a></p></li>
                            </ul>
@@ -538,7 +536,7 @@
 		 <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-hashtag fa-stack-1x"></span>
-                                    </span><span class="mrgn-tp-0 text-muted h5"> Total number of days when the automobile was <strong>made available</strong> to the employee</span> 
+                                    </span><span class="mrgn-tp-0 text-muted h5"> Total number of days when the automobile was <strong>made available</strong> to your employee</span> 
                                  </li>
 <li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-divide"></span><span class="wb-inv">divide by</span></span> <span class="fa-stack text-success">
@@ -661,36 +659,36 @@
 
 </details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the personal use quotient is <strong>more than 1</strong>, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p></li>
-                         <li class="cnjnctn-col"> <p><span class="fas fa-check fa-lg text-success"></span> If the personal use quotient is <strong>less than 1</strong> (calculations from step 7a, 7b and 7C), the benefit meets <strong>one of the conditions for the reduced standby charge</strong>. </p> </li>
+			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the personal use quotient is <strong>more than 1</strong>, your employee <strong>does not</strong> benefit from the reduction to the standby charge. </p></li>
+                         <li class="cnjnctn-col"> <p><span class="fas fa-check fa-lg text-success"></span> If the personal use quotient is <strong>less than 1</strong> (calculations from step 7a, 7b and 7c), the benefit meets the <strong>conditions for the reduced standby charge</strong>. </p> </li>
                           </ul>
 
 </li></ol></details>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employee <strong>does not</strong> meet all conditions, <strong>do not</strong> calculate using the reduced standby charge.</p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Determine if the employee is eligible for the simplified standby charge calculation</a>.</p>
+			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If your employee <strong>does not</strong> meet all conditions, <strong>do not</strong> calculate using the reduced standby charge calculation.</p>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Determine if your employee is eligible for the simplified standby charge calculation</a>.</p>
 
 </li>
-                         <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If the employee meets <strong>all</strong> conditions, calculate using reduced standby charge.</p>
+                         <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If your employee meets <strong>all</strong> conditions, calculate using <strong>reduced</strong> standby charge calculation.</p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step9">Step 9 - Determine which method to use to calculate the benefit</a>.</p></li>
                           </ul>
 </li>
 
-<li><h3 id="step8">Determine if the employee is eligible for the simplified standby charge calculation </h3>
-<p>You can use the simplified calculation if <strong>all</strong> the following apply: </p>
+<li><h3 id="step8">Determine if your employee is eligible for the simplified standby charge calculation </h3>
+<p>You can use the simplified calculation for the standby charge if <strong>all</strong> the following apply: </p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">You own the automobile provided to the employee </li>
-<li class="cnjnctn-col">The employee uses the same automobile throughout the year </li>
-<li class="cnjnctn-col">The employee's principal source of employment is <strong>not</strong> selling or leasing automobiles </li>
-<li class="cnjnctn-col">The employee is <strong>not</strong> eligible for the reduced standby charge</li>
+<li class="cnjnctn-col">You own the automobile provided to your employee </li>
+<li class="cnjnctn-col">Your employee uses the same automobile throughout the year </li>
+<li class="cnjnctn-col">Your employee's principal source of employment is <strong>not</strong> selling or leasing automobiles </li>
+<li class="cnjnctn-col">Your employee is <strong>not</strong> eligible for the reduced standby charge</li>
 </ul>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employee <strong>does not</strong> meet all conditions, <strong>do not</strong> use the simplified standby charge calculation. You must used the detailed standby charge calculation.</p>
+			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If your employee <strong>does not</strong> meet all conditions, <strong>do not</strong> use the simplified standby charge calculation. You must used the <strong>detailed</strong> standby charge calculation.</p>
 
 </li>
-                         <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If the employee meets <strong>all</strong> conditions, calculate using the simplified standby charge calculation.</p></li>
+                         <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If your employee meets <strong>all</strong> conditions, calculate using the <strong>simplified</strong> standby charge calculation.</p></li>
                           </ul>
 
 </li>
