--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1801,25 +1801,35 @@ estimated by the number of pay periods in the year. </p>
 
 </li>
 
-<li><h3 id="step11">Calculate the operating expenses benefit</h3>
+<li><h3 id="step11">Determine if your employee is eligible for the optional operating expenses calculation</h3>
+<p id="calcoper1">You can use the optional calculation for the operating expenses if <strong>all</strong> of the following apply:</p>
+
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"> You include a standby charge in your employee’s income</li>
+<li class="cnjnctn-col"> Your employee uses the automobile primarily (more than 50%) in the performance of their duties (step 7)</li>
+<li class="cnjnctn-col"> Your employee informed you in writing, before the end of the year, of their intention to use the optional method </li>
+</ul>
+
+<hr>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If your employee <strong>does not</strong> meet all conditions, <strong>do not</strong> use the optional operating expenses calculation. You must used the <strong>fixed rate</strong> operating expenses calculation.</p>
+
+</li>
+                         <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If your employee meets <strong>all</strong> conditions, you have the option to calculate using the <strong>optional</strong> operating expenses calculation.</p></li>
+                          </ul>
+</li>
+
+
+<li><h3 id="step12">Calculate the operating expenses benefit</h3>
 <p id="oper1">If you <a href="#availability2" aria-controls=" centred-popup" class="wb-lbx" role="button">make a vehicle available&nbsp;<span class="far fa-question-circle"></span></a> to your employee, you must also calculate the value of the <a href="#opercost2" aria-controls="centred-popup" class="wb-lbx" role="button">operating expenses&nbsp;<span class="far fa-question-circle"></span></a> benefit related to the <a href="#personal2"    aria-controls=" centred-popup" class="wb-lbx" role="button">personal driving&nbsp;<span class="far fa-question-circle"></span></a> of the vehicle.</p>
 <details><summary>Examples of operating expenses</summary>
  <div data-ajax-replace="ajax/oper-vehicle.txt"></div>
 </details>
 <p class="mrgn-tp-md"><span class="fas fa-ban text-danger fa-lg"></span> <strong>Do not</strong> use this calculation if your <strong>employee reimburses you for all operating expenses</strong> related to personal driving <strong>no later than 45 days after the end of the year</strong>. Continue to: <a href="#step12">Step 12 - Calculate the value of the automobile benefit to be included on the T4 slip</a></p>
 <br/>
-<h4>Situations</h4>
 
-<details><summary>Calculate using the <strong>optional</strong> operating expenses calculation</summary>
-<p id="calcoper1">Use the optional calculation if <strong>all</strong> of the following apply:</p>
+<details><summary>Calculate the operating expenses using the <strong>optional</strong> calculation</summary>
 
-<ul class="fa-ul">
-<li><span class="fas fa-check fa-li text-success"></span> You include a standby charge in your employee’s income</li>
-<li><span class="fas fa-check fa-li text-success"></span> Your employee uses the automobile primarily (more than 50%) in the performance of their duties (step 7)</li>
-<li><span class="fas fa-check fa-li text-success"></span> Your employee informed you in writing, before the end of the year, of their intention to use the optional method </li>
-</ul>
-
-<br/>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                  <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
@@ -1897,7 +1907,7 @@ estimated by the number of pay periods in the year. </p>
 </details>
 </details>
 
-<details><summary>Calculate using the <strong>fixed rate</strong> operating expenses calculation</summary>
+<details><summary>Calculate the operating expenses using the <strong>fixed rate</strong> calculation</summary>
 <p id="calcoper2">Use the <a href="#oper-rates" aria-controls="centred-popup" class="wb-lbx" role="button">prescribed rates per kilometre&nbsp;<span class="far fa-question-circle"></span></a> of personal driving to calculate the fixed rate operating expenses:</p>
 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
