--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1800,11 +1800,23 @@ estimated by the number of pay periods in the year. </p>
 
 
 </li>
+<li><h3 id="step11">Determine if you need to calculate the operating expenses benefit</h3>
 
-<li><h3 id="step11">Determine if your employee is eligible for the optional operating expenses calculation</h3>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+			 <li class="cnjnctn-col"><p><strong>Do not</strong> calculate the operating expenses benefit if your <strong>employee reimburses you for all operating expenses</strong> related to personal driving <strong>no later than 45 days after the end of the year</strong>.</p>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step14">Step 14 - Calculate the value of the automobile benefit to be included on the T4 slip</a></p>
+
+</li>
+                         <li class="cnjnctn-col"><p>You have to calculate the operating expenses benefit if your employee <strong>does not </strong> reimburses you for all operating expenses related to personal driving no later than 45 days after the end of the year.</p>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step12">Step 12 - Determine if your employee is eligible for the optional operating expenses calculation</a></p>
+</li>
+                          </ul>
+</li>
+
+<li><h3 id="step12">Determine if your employee is eligible for the optional operating expenses calculation</h3>
 <p id="calcoper1">You can use the optional calculation for the operating expenses if <strong>all</strong> of the following apply:</p>
 
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col"> You include a standby charge in your employee’s income</li>
 <li class="cnjnctn-col"> Your employee uses the automobile primarily (more than 50%) in the performance of their duties (step 7)</li>
 <li class="cnjnctn-col"> Your employee informed you in writing, before the end of the year, of their intention to use the optional method </li>
@@ -1820,12 +1832,11 @@ estimated by the number of pay periods in the year. </p>
 </li>
 
 
-<li><h3 id="step12">Calculate the operating expenses benefit</h3>
+<li><h3 id="step13">Calculate the operating expenses benefit</h3>
 <p id="oper1">If you <a href="#availability2" aria-controls=" centred-popup" class="wb-lbx" role="button">make a vehicle available&nbsp;<span class="far fa-question-circle"></span></a> to your employee, you must also calculate the value of the <a href="#opercost2" aria-controls="centred-popup" class="wb-lbx" role="button">operating expenses&nbsp;<span class="far fa-question-circle"></span></a> benefit related to the <a href="#personal2"    aria-controls=" centred-popup" class="wb-lbx" role="button">personal driving&nbsp;<span class="far fa-question-circle"></span></a> of the vehicle.</p>
 <details><summary>Examples of operating expenses</summary>
  <div data-ajax-replace="ajax/oper-vehicle.txt"></div>
 </details>
-<p class="mrgn-tp-md"><span class="fas fa-ban text-danger fa-lg"></span> <strong>Do not</strong> use this calculation if your <strong>employee reimburses you for all operating expenses</strong> related to personal driving <strong>no later than 45 days after the end of the year</strong>. Continue to: <a href="#step12">Step 12 - Calculate the value of the automobile benefit to be included on the T4 slip</a></p>
 <br/>
 
 <details><summary>Calculate the operating expenses using the <strong>optional</strong> calculation</summary>
@@ -2128,7 +2139,7 @@ $0.24
 
 </li>
 
-<li><h3 id="step12">Calculate the value of the automobile benefit to be included on the T4 slip</h3>
+<li><h3 id="step14">Calculate the value of the automobile benefit to be included on the T4 slip</h3>
 
 <p id="value">Use the following calculation to determine the total value of your employee’s benefit:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
@@ -2219,13 +2230,13 @@ $0.24
 
 
 
-<li><h3 id="step13">Withhold payroll deductions and calculate the GST/HST to remit</h3>
+<li><h3 id="step15">Withhold payroll deductions and calculate the GST/HST to remit</h3>
 <p>The benefit for personal driving of an automobile is a non-cash benefit.</p>
 <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/withhold-alt.txt"></div></p> 
 
 </li>
 
-<li><h3 id="step14">Report the benefit on a slip</h3>
+<li><h3 id="step16">Report the benefit on a slip</h3>
 <p><strong>If the benefit is taxable, </strong>you must report the following on the T4 slip<strong>. </strong></p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
