--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1834,6 +1834,8 @@ estimated by the number of pay periods in the year. </p>
 
 <li><h3 id="step13">Calculate the operating expenses benefit</h3>
 <p id="oper1">If you <a href="#availability2" aria-controls=" centred-popup" class="wb-lbx" role="button">make a vehicle available&nbsp;<span class="far fa-question-circle"></span></a> to your employee, you must also calculate the value of the <a href="#opercost2" aria-controls="centred-popup" class="wb-lbx" role="button">operating expenses&nbsp;<span class="far fa-question-circle"></span></a> benefit related to the <a href="#personal2"    aria-controls=" centred-popup" class="wb-lbx" role="button">personal driving&nbsp;<span class="far fa-question-circle"></span></a> of the vehicle.</p>
+<p>Your employee must keep the <a href="#log" aria-controls="centred-popup" class="wb-lbx" role="button">required records&nbsp;<span class="far fa-question-circle"></span></a> of this benefit even if you are using the fixed rate calculation.</p>
+
 <details><summary>Examples of operating expenses</summary>
  <div data-ajax-replace="ajax/oper-vehicle.txt"></div>
 </details>
