--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1840,7 +1840,7 @@ estimated by the number of pay periods in the year. </p>
  <div data-ajax-replace="ajax/oper-vehicle.txt"></div>
 </details>
 <br/>
-
+<h4>Optional or fixed rate calculations</h4>
 <details><summary>Calculate the operating expenses using the <strong>optional</strong> calculation</summary>
 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
@@ -1921,7 +1921,7 @@ estimated by the number of pay periods in the year. </p>
 </details>
 
 <details><summary>Calculate the operating expenses using the <strong>fixed rate</strong> calculation</summary>
-<p id="calcoper2">Use the <a href="#oper-rates" aria-controls="centred-popup" class="wb-lbx" role="button">prescribed rates per kilometre&nbsp;<span class="far fa-question-circle"></span></a> of personal driving to calculate the fixed rate operating expenses:</p>
+<p id="calcoper2">Use the prescribed rate per kilometre of personal driving to calculate the operating expenses using the fixed rate calculation:</p>
 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                <li><span class="fa-stack text-success">
@@ -1934,7 +1934,7 @@ estimated by the number of pay periods in the year. </p>
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5">Fixed rate </span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"><a href="#oper-rates" aria-controls="centred-popup" class="wb-lbx" role="button">fixed rate&nbsp;<span class="far fa-question-circle"></span></a> </span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
   
