--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -715,7 +715,7 @@ estimated by the number of pay periods in the year. </p>
 </br>
 <h4 id="simple" class="mrgn-tp-lg">Simplified calculation</h4>
  <details><summary>You <strong>own</strong> the automobile - Calculate the standby charge using the simplified calculation</summary>
-<p id="simple1">Use the following to calculate the simplified calculation if <strong>all conditions in step 8 are met</strong>.</p>
+<p id="simple1">Use the following to calculate the standby charge using the simplified calculation if <strong>all conditions in step 8 are met</strong>.</p>
 	    
 <details><summary>What is included in the cost of the automobile</summary>
 <div id="ajax-autoinc">
@@ -1842,7 +1842,7 @@ estimated by the number of pay periods in the year. </p>
 <br/>
 <h4>Optional or fixed rate calculations</h4>
 <details><summary>Calculate the operating expenses using the <strong>optional</strong> calculation</summary>
-
+<p id="calcoper1a">Use the following to calculate the operating expenses using the optional calculation if <strong>all conditions in step 12 are met</strong>:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                  <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
